[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-cleaning-env"
version = "1.0.0"
description = "An OpenEnv environment for training and evaluating AI agents on real-world tabular data cleaning tasks."
authors = [
    { name = "Aryan Bajaj" }
]
dependencies = [
    "fastapi",
    "uvicorn",
    "pandas",
    "numpy",
    "openai",
    "requests",
    "pydantic"
]
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["environment*"]