[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-cleaning-env"
version = "1.0.0"
description = "An OpenEnv-compliant environment for data cleaning."
authors = [{ name = "Aryan Bajaj" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pandas",
    "numpy",
    "pydantic",
    "requests",
    "openai",
    "openenv-core>=0.2.0"
]

[project.scripts]
# This is the "server entry point" the error mentioned
data-cleaning-env-server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["server*", "environment*"]